GNOME Bugzilla – Bug 773582
matroskamux does not allow resolutions above 4096x4096
Last modified: 2016-11-02 14:55:50 UTC
Created attachment 338602 [details] [review] matroskamux - allow resolutions above 4096x4096 The Matroska muxer does not allow resolutions with width and/or height greater than 4096. But the Matroska format itself restricts them to unsigned values up to 8 bytes long, which is a bit more than 4096. Attached is a patch which remedies this.
Thanks! commit ddba77ea6ecd9bbc2d9cbd2ccf2bd3ba5e41598d Author: Branko Subasic <branko@axis.com> Date: Thu Oct 27 14:03:48 2016 +0200 matroskamux: allow resolutions above 4096 Modify the caps string to allow width and height greater than 4096. There is no need to restrict it since the matroska format allows the width and height values to be up to eight bytes long. https://bugzilla.gnome.org/show_bug.cgi?id=773582
18.4 exapixels for height and width? That would require some pretty futuristic hardware to decode. The upcoming PCI Express 4.0 standard can only transfer 31.508 GB/s over a x16 link.
If we avoid the PCIe bus, the transfer rate of HBM (High Bandwidth Memory) is 128 GB/s per package, which gives products such as AMD's "Fiji" platform (eg. Radeon R9 Fury) a memory bandwidth of 512 GB/s. The transfer rate of HBM2 is 256 GB/s per package, which gives products such as the Nvidia Tesla P100 a memory bandwidth of 720 GB/s (Nvidia operates the HBM2 at a clock speed of 1406 MT/s instead of the maximum 2 GT/s). It doesn't seem to have a display output though.
Bugzilla isn't a forum where you should through your thoughts. The patch is to remove artificial limitation at a certain point in a GStreamer pipeline. The usage is out of scope here.
I'm not really sure what you're arguing here? That we should impose some other arbitrary limit on the resolution? Why would the muxer care? Theoretically you could imagine cases where a codec deals with sparse data.